--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -d -Wall")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -Wall")
 
 file(GLOB SOURCE_FILES "./src/*.cpp")
+file(GLOB HEADER_FILES "./include/*.hpp")
 
 include_directories("./include")
 
@@ -20,6 +21,6 @@ include_directories("/usr/include")
 
 find_library(ANT_LIBRARY ant)
 
-add_executable(FragileMirrors ${SOURCE_FILES})
+add_executable(FragileMirrors ${SOURCE_FILES} ${HEADER_FILES})
 
 target_link_libraries(FragileMirrors ${ANT_LIBRARY})
