--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,48 @@
 # cmake -DCMAKE_BUILD_TYPE=Debug
 # cmake -DCMAKE_BUILD_TYPE=Release
 
-cmake_minimum_required (VERSION 2.8.11)
-project (FRAGILE_MIRRORS)
+cmake_minimum_required (VERSION 3.2)
+project (FragileMirrors)
 
-list(APPEND CMAKE_CXX_FLAGS "-std=c++11")
+list(APPEND CMAKE_CXX_FLAGS " -std=c++1y -Werror -Wall ")
 
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -d -Wall")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -Wall")
+set(CMAKE_CXX_FLAGS_DEBUG " ${CMAKE_CXX_FLAGS_DEBUG} ")
+set(CMAKE_CXX_FLAGS_RELEASE " ${CMAKE_CXX_FLAGS_RELEASE} -O3 ")
+
+
+set(BinDir ${PROJECT_SOURCE_DIR}/bin)
+set(LibDir ${PROJECT_SOURCE_DIR}/lib)
+
+# archive is for static libraries
+set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BinDir} )
+set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LibDir} )
+set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LibDir} )
+foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
+string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
+set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${BinDir} )
+set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${LibDir} )
+set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${LibDir} )
+endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )
+
 
 file(GLOB SOURCE_FILES "./src/*.cpp")
-file(GLOB HEADER_FILES "./include/*.hpp")
+file(GLOB HEADER_FILES "./include/*.h" "./include/*.hpp")	
 
 include_directories("./include")
-
 include_directories("/usr/local/include")
 include_directories("/usr/include")
 
 find_library(ANT_LIBRARY ant)
 
-add_executable(FragileMirrors ${SOURCE_FILES} ${HEADER_FILES})
+add_library(fragmir ${SOURCE_FILES} ${HEADER_FILES}) 
+target_link_libraries(fragmir ${ANT_LIBRARY})
 
-target_link_libraries(FragileMirrors ${ANT_LIBRARY})
+add_executable(solver "app/solver.cpp")
+target_link_libraries(solver fragmir)
+
+add_executable(tester "app/tester.cpp")
+target_link_libraries(tester fragmir)
+
+
+
+
