--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
 
+# User-specific stuff:
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/dictionaries
+.idea/*.iml
+.idea/modules.xml
+
+cmake-build-debug/
+cmake-build-release/
+
 build*
 .DS_Store
 bin
@@ -8,3 +18,6 @@ Makefile
 *.cmake
 CMakeCache.txt
 CMakeFiles
+
+
+
