fix for linux gnu compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,10 @@
 cmake_minimum_required (VERSION 3.2)
 project (FragileMirrors)
 
-list(APPEND CMAKE_CXX_FLAGS " -std=c++1z -stdlib=libc++ -Werror -Wall -Wno-error=char-subscripts -Wno-char-subscripts -Wno-unused-const-variable")
+list(APPEND CMAKE_CXX_FLAGS " -std=c++1z -Werror -Wall -Wno-parentheses -Wno-char-subscripts -Wno-unused-const-variable -Wno-unused-but-set-variable -Wno-sign-compare")
+if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+    list(APPEND CMAKE_CXX_FLAGS -stdlib=libc++)
+endif()
 
 set(CMAKE_CXX_FLAGS_DEBUG " ${CMAKE_CXX_FLAGS_DEBUG} ")
 set(CMAKE_CXX_FLAGS_RELEASE " ${CMAKE_CXX_FLAGS_RELEASE} -O3 ")
@@ -34,6 +37,9 @@ include_directories("/usr/local/include")
 include_directories("/usr/include")
 
 find_library(ANT_LIBRARY ant)
+if (NOT ANT_LIBRARY)
+    message(FATAL_ERROR "ant library not found")
+endif()
 
 add_library(fragmir ${SOURCE_FILES} ${HEADER_FILES})
 target_link_libraries(fragmir ${ANT_LIBRARY})
@@ -64,6 +70,9 @@ target_link_libraries(version_v1 fragmir)
 target_compile_options(version_v1 PRIVATE "-Wno-unused-function")
 
 find_library(GTEST_LIBRARY gtest)
+if (NOT GTEST_LIBRARY)
+    message(FATAL_ERROR "gtest library not found")
+endif()
 
 # tests
 file(GLOB_RECURSE TEST_SOURCE_FILES "test/*.cpp")
@@ -73,9 +82,15 @@ target_link_libraries(unittest fragmir ${GTEST_LIBRARY})
 
 
 find_library(GBENCHMARK_LIBRARY benchmark)
+if (NOT GBENCHMARK_LIBRARY)
+    message(FATAL_ERROR "benchmark library not found")
+endif()
 
 # benchmarks
 file(GLOB_RECURSE BENCHMARK_SOURCE_FILES "benchmark/*.cpp")
 
 add_executable(benchmark ${BENCHMARK_SOURCE_FILES})
 target_link_libraries(benchmark fragmir ${GBENCHMARK_LIBRARY})
+if(UNIX AND NOT APPLE)
+    target_link_libraries(benchmark pthread)
+endif()
