try new things.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@
 cmake_minimum_required (VERSION 3.2)
 project (FragileMirrors)
 
-list(APPEND CMAKE_CXX_FLAGS " -std=c++1z -Werror -Wall -Wno-parentheses -Wno-char-subscripts -Wno-unused-const-variable -Wno-unused-but-set-variable -Wno-sign-compare")
+list(APPEND CMAKE_CXX_FLAGS " -std=c++1z -Werror -Wall -Wno-narrowing -Wno-parentheses -Wno-char-subscripts -Wno-unused-const-variable -Wno-unused-but-set-variable -Wno-sign-compare")
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
     list(APPEND CMAKE_CXX_FLAGS -stdlib=libc++)
 endif()
@@ -45,11 +45,14 @@ add_library(fragmir ${SOURCE_FILES} ${HEADER_FILES})
 target_link_libraries(fragmir ${ANT_LIBRARY})
 
 add_executable(solver "app/main_template.cpp" "app/solver.cpp")
-target_link_libraries(solver fragmir)
+target_link_libraries(solver fragmir ant)
 
 # quick run to see result of the change
 add_executable(tester "app/tester.cpp")
 target_link_libraries(tester fragmir)
+
+add_executable(bs_best_width app/bs_best_width.cpp)
+target_link_libraries(bs_best_width fragmir)
 
 # solution from other people
 # need fragmir for helper functions
@@ -68,6 +71,17 @@ target_link_libraries(eldidou fragmir)
 add_executable(version_v1 "app/main_template.cpp" "submit/version_v1.cpp")
 target_link_libraries(version_v1 fragmir)
 target_compile_options(version_v1 PRIVATE "-Wno-unused-function")
+
+add_executable(bs_new app/main_template.cpp app/bs_new.cpp)
+target_link_libraries(bs_new fragmir)
+
+add_executable(bs app/main_template.cpp app/bs.cpp)
+target_link_libraries(bs fragmir)
+
+add_executable(bs_balanced "app/main_template.cpp" "app/bs_balanced.cpp")
+target_link_libraries(bs_balanced fragmir)
+
+
 
 find_library(GTEST_LIBRARY gtest)
 if (NOT GTEST_LIBRARY)
@@ -94,3 +108,7 @@ target_link_libraries(benchmark fragmir ${GBENCHMARK_LIBRARY})
 if(UNIX AND NOT APPLE)
     target_link_libraries(benchmark pthread)
 endif()
+
+# depth - calculate stats to run beam search with time limits
+add_executable(depth app/bs_best_width.cpp)
+target_link_libraries(depth fragmir tbb)
