--- a/app/solver/CMakeLists.txt
+++ b/app/solver/CMakeLists.txt
@@ -18,7 +18,7 @@ add_executable(solv_bs_restore_i3 main_template.cpp bs_restore_i3.cpp
                ${RNG_FILE}
                ${CMAKE_SOURCE_DIR}/src/mirrors/board/board_n_i2.cpp
                ${CMAKE_SOURCE_DIR}/src/mirrors/board/board_r.cpp
-               ${CMAKE_SOURCE_DIR}/src/legacy/score.cpp)
+               ${CMAKE_SOURCE_DIR}/src/legacy/score_.cpp)
 target_link_libraries(solv_bs_restore_i3 boost_program_options)
 
 add_executable(solv_bs_restore_i4 main_template.cpp bs_restore_i4.cpp ${RNG_FILE} ${CMAKE_SOURCE_DIR}/src/mirrors/board/board_n_i4.cpp)
@@ -27,39 +27,50 @@ target_link_libraries(solv_bs_restore_i4 boost_program_options)
 add_executable(solv_bs_restore_i5 main_template.cpp bs_restore_i5.cpp
         ${RNG_FILE}
         ${CMAKE_SOURCE_DIR}/src/mirrors/board/board_n_i2.cpp
-        ${CMAKE_SOURCE_DIR}/src/legacy/score.cpp)
+        ${CMAKE_SOURCE_DIR}/src/legacy/score_.cpp)
 target_link_libraries(solv_bs_restore_i5 boost_program_options)
 
 add_executable(solv_bs_restore_i6 main_template.cpp bs_restore_i6.cpp
         ${RNG_FILE}
         ${CMAKE_SOURCE_DIR}/src/mirrors/board/board_n_i2.cpp
         ${CMAKE_SOURCE_DIR}/src/mirrors/board/board_r.cpp
-        ${CMAKE_SOURCE_DIR}/src/legacy/score.cpp)
+        ${CMAKE_SOURCE_DIR}/src/legacy/score_.cpp)
 target_link_libraries(solv_bs_restore_i6 boost_program_options)
 
 add_executable(solv_bs_restore_i7 main_template.cpp bs_restore_i7.cpp
         ${RNG_FILE}
         ${CMAKE_SOURCE_DIR}/src/mirrors/board/board_n_i2.cpp
-        ${CMAKE_SOURCE_DIR}/src/legacy/score.cpp)
+        ${CMAKE_SOURCE_DIR}/src/legacy/score_.cpp)
 target_link_libraries(solv_bs_restore_i7 boost_program_options)
 
 add_executable(solv_bs_restore_i8 main_template.cpp bs_restore_i8.cpp
         ${RNG_FILE}
         ${CMAKE_SOURCE_DIR}/src/mirrors/board/board_n_i5.cpp
-        ${CMAKE_SOURCE_DIR}/src/legacy/score.cpp)
+        ${CMAKE_SOURCE_DIR}/src/legacy/score_.cpp)
 target_link_libraries(solv_bs_restore_i8 boost_program_options)
 
 add_executable(solv_1 main_template.cpp solver_1.cpp
         ${RNG_FILE}
         ${CMAKE_SOURCE_DIR}/src/mirrors/board/board_r.cpp
-        ${CMAKE_SOURCE_DIR}/src/legacy/score.cpp)
+        ${CMAKE_SOURCE_DIR}/src/legacy/score_.cpp)
 target_link_libraries(solv_1 boost_program_options)
+
+add_executable(solv_2 main_template.cpp solver_2.cpp
+        ${RNG_FILE}
+        ${CMAKE_SOURCE_DIR}/src/mirrors/board/board_r.cpp
+        ${CMAKE_SOURCE_DIR}/src/legacy/score_.cpp)
+target_link_libraries(solv_2 boost_program_options)
+
+add_executable(solv_3 main_template.cpp solver_3.cpp
+        ${RNG_FILE}
+        ${CMAKE_SOURCE_DIR}/src/mirrors/board/board_r.cpp
+        ${CMAKE_SOURCE_DIR}/src/legacy/score_.cpp)
+target_link_libraries(solv_3 boost_program_options)
 
 
 set(OTHERS_DIR ${CMAKE_SOURCE_DIR}/others)
 
 # solution from other people
-# need fragmir for helper functions
 add_executable(colun main_template.cpp ${OTHERS_DIR}/colun.cpp)
 target_link_libraries(colun boost_program_options)
 
