--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 cmake-build-debug/
 cmake-build-release/
 cmake-build-fast/
+cmake-build-profile/
 
 build*
 .DS_Store
@@ -22,4 +23,4 @@ CMakeFiles
 
 scores/
 data/db.db
-
+data/board/
